# flatInvoker

./: .gitattributes  .gitignore  CMakeLists.txt  DesignSystem.ts  LLM_CONTEXT.md  README.md  SETUP.md  build.gradle.kts  gradle.properties  init.gradle.kts  local.properties  publishing.gradle.kts  root.cmake  settings.gradle.kts
.github/workflows/: documentation.yml  publish.yml  static.yml
.run/: Reaktor.run.xml  tester-react.app.run.xml
benchmark/: README.md
contracts/: Command.fbs
core-cpp/: base.h
dependeasy/: build.gradle.kts  settings.gradle.kts
dependeasy/plugin/: build.gradle.kts
docs/: Reaktor.md  STRUCTURE.md  index.html  navigation.html  package-list
docs/flatbuffers-kotlin/: index.html  navigation.html
docs/flatinvoker-compiler/: index.html
flatinvoker-compiler/: build.gradle.kts
flatinvoker-core/: README.md  build.gradle.kts  buildSize.csv  flatinvoker_core.podspec  version
flatinvoker-core/cpp/: CMakeLists.txt  bindings.def  reaktor.def
flatinvoker-core/cpp/common/: CBase.cpp  CBase.h  CppBase.cpp  CppBase.h  CppBase.hpp  Flex.cpp  Flex.h  FlexPrinter.cpp
flatinvoker-core/cpp/darwin/: Reaktor.h  Reaktor.mm
flatinvoker-core/cpp/droid/: DroidBase.h  JFlexBuffer.cpp  JFlexBuffer.h  JavaJni.cpp  JavaJni.h  Main.cpp  Main.h
flatinvoker-ffi/: build.gradle.kts  flatinvoker_ffi.podspec
flatinvoker-ffi/cpp/: CMakeCache.txt  CMakeLists.txt
flatinvoker-ffi/cpp/common/: Engine.cpp  Invokable.cpp  Invokable.h  PlatformInvoker.h
flatinvoker-ffi/cpp/droid/: AndroidInvokable.cpp  AndroidInvokable.h  AndroidInvoker.cpp  AndroidInvoker.h
flatinvoker-ffi/cpp/main/: main.cpp
flatinvoker-ffi/cpp/test/: main.cpp
flatinvoker-ipc/: build.gradle.kts  flatinvoker_ipc.podspec
flatinvoker-ipc/cpp/: CMakeLists.txt
flatinvoker-ipc/cpp/darwin/: DarwinInvoker.h
flatinvoker-react/: batcave.podspec  build.gradle.kts  flatinvoker_react.podspec
flatinvoker-react/cpp/: Base.h  CMakeLists.txt  JSIInstaller.h  reaktor.podspec
flatinvoker-react/cpp/darwin/: DarwinBase.h  DarwinConverter.h  DarwinInvoker.h  DarwinInvoker.mm  DarwinPromise.h
flatinvoker-react/cpp/droid/: AndroidBase.cpp  AndroidBase.h  Installer.h  Invoker.cpp  Invoker.h  JNIConverter.cpp  KeepAlive.h  Reaktor.h
flatinvoker-react/cpp/droid/bindings/: Functions.cpp  Functions.h  JArrayList.h  JHashMap.cpp  JHashMap.h
flatinvoker-react/cpp/framework/: AndroidInvoker.h  DarwinInvoker.h  Installer.h
flatinvoker-react/cpp/modules/: LayoutDatabase.h  NetworkModule.h
flatinvoker-react/cpp/types/: Async.cpp  Types.cpp
js-test/: build.gradle.kts  index.html  settings.gradle.kts
lib-flexbuffer/: build.gradle.kts
lib-kotlin/: build.gradle.kts
lib-kotlin/cpp/: CMakeLists.txt  Reaktor.cpp  Reaktor.h  reaktor.def
lib-kotlin/cpp/common/: Base.h  Flex.cpp  Flex.h
lib-kotlin/cpp/darwin/: Reaktor.mm
lib-kotlin/cpp/droid/: DroidBase.h  DroidChannel.cpp  DroidChannel.h  JavaJni.cpp  JavaJni.h  JavaMessageSender.cpp  JavaMessageSender.h  Main.cpp  Main.h
reaktor/: settings.gradle.kts
reaktor-auth/: README.md  TECHNICAL_README.md  WEB_IMPLEMENTATION_SUMMARY.md  build.gradle.kts  buildSize.csv  heimdall.sql  reaktor_auth.podspec  version
reaktor-cloudflare/: README.md  build.gradle.kts  buildSize.csv  reaktor_cloudflare.podspec
reaktor-compiler/: build.gradle.kts
reaktor-compose/: core.podspec  reaktor_core.podspec
reaktor-core/: README.md  build.gradle.kts  buildSize.csv  package.json  reaktor_core.podspec  version
reaktor-db/: README.md  build.gradle.kts  buildSize.csv  reaktor_db.podspec
reaktor-ffi/: build.gradle.kts  buildSize.csv  reaktor_ffi.podspec
reaktor-ffi/cpp/: CMakeLists.txt  bindings.def
reaktor-ffi/cpp/common/: Engine.cpp  Engine.h
reaktor-ffi/cpp/droid/: AndroidInvokable.cpp
reaktor-flexbuffer/: build.gradle.kts  buildSize.csv  flatinvoker_core.podspec  reaktor_flexbuffer.podspec
reaktor-flow/: package.json
reaktor-google/: build.gradle.kts  reaktor_google.podspec
reaktor-graph/: README.md  build.gradle.kts  buildSize.csv  reaktor_graph.podspec
reaktor-graph-port/: build.gradle.kts  reaktor_graph_port.podspec
reaktor-hono/: README.md  build.gradle.kts
reaktor-io/: README.md  build.gradle.kts  buildSize.csv  reaktor_io.podspec
reaktor-location/: build.gradle.kts  buildSize.csv  reaktor_location.podspec
reaktor-mcp/: build.gradle.kts  buildSize.csv  reaktor_mcp.podspec
reaktor-media/: README.md  build.gradle.kts  buildSize.csv  package-lock.json  package.json  reaktor_media.podspec
reaktor-media-actual/: index.ts  lib_media.podspec
reaktor-navigation/: README.md  build.gradle.kts  reaktor_navigation.podspec
reaktor-notification/: build.gradle.kts  buildSize.csv  reaktor_notification.podspec
reaktor-react/: buildSize.csv
reaktor-tactile/: build.gradle.kts  buildSize.csv  reaktor_tactile.podspec  version
reaktor-telemetry/: build.gradle.kts  reaktor_telemetry.podspec
reaktor-ts-cloudflare/: README.md  eslint.config.js  package.json  tsconfig.json
reaktor-ts-core/: README.md  eslint.config.js  package.json  tsconfig.json
reaktor-ts-react/: README.md  eslint.config.js  package.json  tsconfig.json
reaktor-ui/: README.md  build.gradle.kts  buildSize.csv  package.json  reaktor_ui.podspec  version
reaktor-web/: build.gradle.kts  buildSize.csv  reaktor_web.podspec
reaktor-work/: README.md  build.gradle.kts  buildSize.csv  reaktor_work.podspec
rpc-generator/: main.cpp
rpc-runtime/: library.cpp  library.h
rpc-test/: Calculator.fbs
scripts/: bootstrap.js  deleteBuildFolders.mjs  helpers.mjs  newModule.mjs  treeBuilder.mjs
suspend-function-processor/: build.gradle.kts
suspend-function-sample/: build.gradle.kts
suspend-js-test/: build.gradle.kts  test.js
test-kmm/: build.gradle.kts  gradle.properties  local.properties
tester-android/: build.gradle.kts
tester-react/: .gitattributes  .gitignore  App.tsx  build.gradle.kts  gradle.properties  metro.config.js  package-lock.json  package.json  settings.gradle.kts  tsconfig.json
website/: docusaurus.config.ts  package-lock.json  package.json  wrangler.jsonc
(+7145 files in other folders)
